# Franka-ROS-TRAIN

./: README.md
control_methods/: CMakeLists.txt  package.xml
control_methods/config/: base2tracking.txt  debug.txt  solution.txt  test.txt
control_methods/include/: qr24.h
control_methods/launch/: calibration.launch  joint_velocity_train_controller.launch  remoteControl.launch  testArmMovement.launch  testGripper.launch  testHandEye.launch  testMoveEndeffector.launch  testMoveEndeffectorOptitrack.launch  testMoveJoints.launch  testMoveTrajectory.launch
control_methods/python/: moveEndeffector.py
control_methods/scripts/: gripperHome.py  moveGripper.py  moveTrajectory.py  remoteControl.py  test.py
control_methods/src/: armMove.py  calibration.cpp  gripperHome.py  gripperMove.py  moveEndeffectorOptitrack.py  moveJoints.py  moveTrajectory.py  qr24.cpp
files/cad/: OptiTrackFlange.SLDPRT  OptiTrackFlange.STL
franka_ros_train_controllers/: CMakeLists.txt  package.xml
franka_ros_train_controllers/config/: base2tracking.txt  solution.txt  train_controller.yaml
franka_ros_train_controllers/include/: cartesian_impedance_controller.h  qr24.h
franka_ros_train_controllers/launch/: calibration.launch  moveGripper.launch  remoteControl.launch
franka_ros_train_controllers/scripts/: remoteControl.py
franka_ros_train_controllers/src/: calibration.cpp  cartesian_impedance_controller.cpp  qr24.cpp
simulation_environment/: CMakeLists.txt  package.xml  readme.md
simulation_environment/launch/: hand.launch
simulation_environment/models/hand/: hand.gazebo  hand.xacro  macros.xacro  parameter.xacro
simulation_environment/src/: dynamic_publisher.cpp  force_joint.cpp  set_imu_data.cpp
simulation_environment/worlds/: hand.world
