<?xml version="1.0"?>
<package format="2">
  <name>control_methods</name>
  <version>1.0.0</version>
  <description>Control scripts for the TRAIN project</description>
  <maintainer email="rottmann@rob.uni-luebeck.de">Nils Rottmann, Robin Denz</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libfranka</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf</depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
