<?xml version="1.0"?>
<package format="2">
  <name>franka_ros_train_controllers</name>
  <version>1.0.0</version>
  <description>Control scripts for the TRAIN project</description>
  <maintainer email="rottmann@rob.uni-luebeck.de">Nils Rottmann, Robin Denz</maintainer>
  <license>Apache 2.0</license>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>franka</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libfranka</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf_conversions</depend>
  <depend>hardware_interface</depend>
  <depend>franka_gripper</depend>
  <depend>eigen_conversions</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>controller_interface</depend>
  <depend>franka_example_controllers</depend>
  <depend>franka_control</depend>
  <depend>controller_manager</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf</depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
